--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.7",
     "nodemon": "^2.0.2"
+  },
+  "devDependencies": {
+    "@shelf/jest-mongodb": "^1.1.5",
+    "jest": "^25.3.0"
   }
 }
